--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -1,3 +1,82 @@
+@book{@mvbook{ID,
+		author = {author},
+		title = {title},
+		date = {date},
+		OPTeditor = {editor},
+		OPTeditora = {editora},
+		OPTeditorb = {editorb},
+		OPTeditorc = {editorc},
+		OPTtranslator = {translator},
+		OPTannotator = {annotator},
+		OPTcommentator = {commentator},
+		OPTintroduction = {introduction},
+		OPTforeword = {foreword},
+		OPTafterword = {afterword},
+		OPTsubtitle = {subtitle},
+		OPTtitleaddon = {titleaddon},
+		OPTlanguage = {language},
+		OPToriglanguage = {origlanguage},
+		OPTedition = {edition},
+		OPTvolumes = {volumes},
+		OPTseries = {series},
+		OPTnumber = {number},
+		OPTnote = {note},
+		OPTpublisher = {publisher},
+		OPTlocation = {location},
+		OPTisbn = {isbn},
+		OPTpagetotal = {pagetotal},
+		OPTaddendum = {addendum},
+		OPTpubstate = {pubstate},
+		OPTdoi = {doi},
+		OPTeprint = {eprint},
+		OPTeprintclass = {eprintclass},
+		OPTeprinttype = {eprinttype},
+		OPTurl = {url},
+		OPTurldate = {urldate},
+	}
+	,
+	author = {author},
+	title = {title},
+	date = {date},
+	OPTeditor = {editor},
+	OPTeditora = {editora},
+	OPTeditorb = {editorb},
+	OPTeditorc = {editorc},
+	OPTtranslator = {translator},
+	OPTannotator = {annotator},
+	OPTcommentator = {commentator},
+	OPTintroduction = {introduction},
+	OPTforeword = {foreword},
+	OPTafterword = {afterword},
+	OPTsubtitle = {subtitle},
+	OPTtitleaddon = {titleaddon},
+	OPTmaintitle = {maintitle},
+	OPTmainsubtitle = {mainsubtitle},
+	OPTmaintitleaddon = {maintitleaddon},
+	OPTlanguage = {language},
+	OPToriglanguage = {origlanguage},
+	OPTvolume = {volume},
+	OPTpart = {part},
+	OPTedition = {edition},
+	OPTvolumes = {volumes},
+	OPTseries = {series},
+	OPTnumber = {number},
+	OPTnote = {note},
+	OPTpublisher = {publisher},
+	OPTlocation = {location},
+	OPTisbn = {isbn},
+	OPTchapter = {chapter},
+	OPTpages = {pages},
+	OPTpagetotal = {pagetotal},
+	OPTaddendum = {addendum},
+	OPTpubstate = {pubstate},
+	OPTdoi = {doi},
+	OPTeprint = {eprint},
+	OPTeprintclass = {eprintclass},
+	OPTeprinttype = {eprinttype},
+	OPTurl = {url},
+	OPTurldate = {urldate},
+}
 \chapter{引言}
 \label{cha:intro}
 UNIX~操作系统（UNIX），是美国AT\&T公司1971年~在PDP-11上运行的操作系统。具有多用户、
