补充第四章开头

--- a/data/chap01.tex
+++ b/data/chap01.tex
@@ -591,7 +591,7 @@ EP.B.8 & 126.74 & 0.003 & 0.017 & 0.005 & 0.083 & 1656 \\
 \hline
           主要关注点       &能抵御外界扰动的幅值和相位的上限  &满足规定参数的工作时间  &在内部模型不确定性和外部摄动情况下，系统能否保持内稳定  &  在内部模型不确定性和外部摄动情况下，系统能否保持动态指标在规定范围内  \\
 \hline
-            评价指标         &p幅值相位裕度、Lyapunov渐近稳定等    &可靠度、失效率、平均无故障时间等    &  \multicolumn{2}{c|}{Kharitonov区间理论、H∞控制理论、结构奇异值理论(μ理论)等 咖啡咖啡机}  \\
+            评价指标         &p幅值相位裕度、Lyapunov渐近稳定等    &可靠度、失效率、平均无故障时间等    &  \multicolumn{2}{c|}{Kharitonov区间理论、H∞控制理论、结构奇异值理论(μ理论)等 }  \\
 \hline
 \end{tabular}
 \end{table}
